# lanius

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  build.rs
.claude/skills/debug/: SKILL.md  binary-silently-sigkilled.md  broker-credential-refused.md  daemon-stack-health.md  stalled-tests.md  stray-workflow-processes.md
.claude/skills/docs-disclosure-indexer/: SKILL.md
.claude/skills/docs-disclosure-indexer/agents/: openai.yaml
.claude/skills/handoff-workflow/: SKILL.md  second-level.md
.claude/skills/lanius-brand/: SKILL.md
.claude/skills/lanius-voice/: SKILL.md
.claude/skills/web-qa/: SKILL.md
.github/workflows/: ci.yml  release.yml
brand/logos/: CONCEPTS.md
docs/: README.md  _bugs.md  _questions.md  _responses.md  acp-wire-notes.md  actors.md  adding-a-harness.md  bus.md  channels.md  coding-harness-onboarding.md  config.md  context.md  identity.md  init.md  layering.md  mcp.md  notes-dolt-spike.md  notes-headless-elicitation.md  notes-scaling-and-storage.md  runtime.md  sandbox.md  security.md  topics.md
docs/appserver-spike/: README.md  e2e-allow-obs-trail.jsonl  e2e-deny-obs-trail.jsonl
docs/appserver-spike/m1-probes/: mcp_server.py  scratch-mcp.mjs  spike.py  spike_block.py  spike_mcp.py  transcript-mcp.jsonl
docs/bugs/: README.md  claude-code-adapter-summary-credential-crash.md  worker-surfaces.md
docs/handoffs/: README.md  acp-consolidation-codex-opencode.md  acp-harness.md  acp-session-load-resume.md  agent-comms-package.md  agent-comms-ui.md  agent-dm-relay.md  agent-launching.md  agent-situational-awareness.md  agent-tool-roundtrip-liveness.md  agentic-configuration.md  ambient-conversations.md  app-tsx-split.md  authority-delegation.md  bus-resilience.md  chainlink-integration.md  chat-conversations.md  chat-follow.md  chat-liveness.md  chat-rendering.md  chrome-polish.md  codex-app-server.md  codex-cage.md  coding-agent-dispatch.md  coding-agent-observability.md  coding-agents.md  coding-session-reliability.md  coding-skill-materialization.md  comms-package.md  configuration-ux.md  cross-harness-death.md  dm-channel-grammar.md  e2e-flaky-hardening.md  e2e-stall-guard.md  harness-modes.md  helper-first-encounter.md  helper-m4-harness-backed-turns.md  html-messages.md  kb-core.md  kb-discovery.md  (+42 more)
docs/journeys/: 01-setup.md  02-claude-code.md  03-cost-visibility.md  04-risk-and-trust.md  05-codex-integration.md  06-configuration.md  07-chatting.md  08-dispatching-a-worker.md  09-colliding-with-a-sibling-agent.md  10-what-did-the-agent-read.md  11-profiles.md  12-knowing-what-a-sibling-is-doing.md  13-adding-a-harness-without-forking.md  14-timers-and-scripts.md  15-agent-messaging-itself.md  15-agentic-configuration.md  16-the-helper.md  README.md  characters.md  chat-from-anywhere.md  reaching-the-user.md  ui-preferences.md
docs/ui-flows/: README.md  app-search-findings.md  configuration.md  findings.md
examples/: harness_echo.rs
kits/: README.md
kits/core/: README.md
kits/core/profiles/architect/: profile.toml
kits/core/profiles/architect/blocks/: 00-architect.md  10-kb-llm-strengths.md
kits/core/profiles/kb-compactor/: profile.toml
kits/core/profiles/kb-ratifier/: profile.toml
kits/dev/: README.md
kits/dev/profiles/dev/: profile.toml
kits/funnel/: README.md
kits/funnel/profiles/scout/: profile.toml
kits/funnel/profiles/scout/blocks/: 00-scout.md
kits/helper/profiles/helper/: profile.toml
kits/helper/profiles/helper/blocks/: 00-charter.md  10-setup-progress.md  20-kb-elanus.md  20-kb-lanius.md
kits/memory-blocks-demo/: README.md
kits/stdlib/: README.md  kit.toml
scripts/: new-worktree.sh  upgrade-to-lanius.sh
spike/ntex/: Cargo.toml  REPORT.md
spike/ntex/src/: main.rs
src/: acp.rs  agentcli.rs  blockcli.rs  broker.rs  bus.rs  buscli.rs  code_projection.rs  codeagent.rs  codesession.rs  config_repo.rs  configcli.rs  context.rs  context_blocks.rs  context_store.rs  db.rs  dev.rs  discover.rs  dispatcher.rs  dotenv.rs  envcompat.rs  estimate.rs  estimatecli.rs  events.rs  exec.rs  git_hardened.rs  groundskeeper.rs  harness.rs  hooks.rs  human.rs  initcmd.rs  kb.rs  kbcli.rs  kit.rs  lib.rs  mailcli.rs  main.rs  manifest.rs  mcp.rs  models.rs  packages.rs  (+15 more)
src/platform/: mod.rs  unix.rs  windows.rs
src/provider/: tests.rs
templates/: block-00-system.md  block-10-context.md  block-20-discovery.md  bus.toml  profile.toml  recorder.toml
tests/: bus_resilience_repro.sh  discovery_e2e.rs  e2e.sh  external_harness.rs  groundskeeper_cadence.rs  init_harness_seeding.rs  schedule_cli.rs
ui/tui/: README.md  app.js  config.js  index.js  package-lock.json  package.json
ui/tui/test/: smoke.mjs
ui/web/: README.md  config.mjs  index.html  package-lock.json  package.json  server.mjs  vite.config.ts
ui/web/public/: app.js  index.html  style.css
ui/web/src/: App.tsx  CodeSessions.tsx  CommsView.tsx  Markdown.tsx  ProvidersView.tsx  api.ts  live.ts  main.tsx  routing.ts  styles.css
ui/web/src/components/: AgentAssistant.tsx  AgentChip.tsx  WorkerNoteCompose.tsx  WorkerNotesPanel.tsx  primitives.tsx
ui/web/src/lib/: conversation.ts  cost.ts  format.ts  health.ts  packages.ts
ui/web/src/views/: ConfigureView.tsx  ConverseView.tsx  Nav.tsx  RailView.tsx  SessionsView.tsx  SetupView.tsx  WelcomeView.tsx
ui/web/test/: PLAN.md  smoke.mjs  sse-reconnect.mjs  ui.spec.mjs  walkthrough.mjs
