[package]
name = "lanius"
version = "0.1.0"
edition = "2021"
default-run = "lanius"
description = "A local control plane for AI work: event-driven agent orchestration with a flight recorder (inetd + cron + git hooks + sqlite)"
license = "Apache-2.0"
repository = "https://github.com/tkellogg/lanius"
homepage = "https://github.com/tkellogg/lanius"
readme = "README.md"
keywords = ["agents", "llm", "orchestration", "claude", "harness"]
categories = ["command-line-utilities", "development-tools"]

# What ships in the published crate. `include` is an explicit allowlist (it
# overrides .gitignore), so it MUST cover everything the binary compiles against:
# `src`, `build.rs`, the `include_str!` roots in src/initcmd.rs (`packages/`,
# `kits/`), and the web UI that src/web.rs embeds via `include_dir!`
# (`ui/web/dist`, a build output that is gitignored). Miss one and `cargo
# install` fails to compile on the user's machine.
#
# BUILD ORDER is now automatic: `build.rs` runs the vite build into ui/web/dist
# BEFORE the crate compiles, so a plain `cargo build` always embeds a fresh UI —
# no manual rebuild-dist-then-re-embed ritual. On a machine with no npm / no ui
# source (e.g. a published source tarball, which ships only `ui/web/dist`, not
# `ui/web/src`), build.rs warns loudly and embeds the existing dist as-is. Set
# `LANIUS_SKIP_UI_BUILD=1` to skip the npm build and embed the existing dist
# (broken local Node, CI oddities). Note: dist is gitignored, NOT committed —
# a fresh no-Node clone has no dist and build.rs fails with a clear message.
# See build.rs and docs/handoffs/web-embed-freshness.md.
include = [
    "src/**/*",
    "build.rs",
    "packages/**/*",
    "kits/**/*",
    "templates/**/*",
    "ui/web/dist/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.6", features = ["derive"] }
croner = "3.0"
genai = "0.6.5"
libc = "0.2"
ntex = { version = "3.9.6", features = ["tokio"] }
ntex-mqtt = "8.1.0"
rumqttc = "0.24"
rusqlite = { version = "0.40", features = ["bundled"] }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
toml = "1"
uuid = { version = "1", features = ["v4"] }
toml_edit = "0.25.12"
reqwest = { version = "0.13.4", features = ["json"] }
include_dir = "0.7"
chacha20poly1305 = "0.10"

[[bin]]
name = "harness-acp"
path = "src/bin/harness-acp.rs"
