[package]
name = "lanius"
version = "0.1.1"
edition = "2021"
rust-version = "1.88"
default-run = "lanius"
description = "A local control plane for AI work: event-driven agent orchestration with a flight recorder (inetd + cron + git hooks + sqlite)"
license = "Apache-2.0"
repository = "https://github.com/tkellogg/lanius"
homepage = "https://github.com/tkellogg/lanius"
readme = "README.md"
keywords = ["agents", "llm", "orchestration", "claude", "harness"]
categories = ["command-line-utilities", "development-tools"]

# What ships in the published crate. `include` is an explicit allowlist (it
# overrides .gitignore), so it MUST cover everything the binary compiles against:
# `src`, `build.rs`, the `include_str!` roots in src/initcmd.rs (`packages/`,
# `kits/`), and the web UI that src/web.rs embeds via `include_dir!`
# (`ui/web/dist`, a build output that is gitignored). Miss one and `cargo
# install` fails to compile on the user's machine.
#
# BUILD ORDER is now automatic: `build.rs` runs the vite build into ui/web/dist
# BEFORE the crate compiles, so a plain `cargo build` always embeds a fresh UI —
# no manual rebuild-dist-then-re-embed ritual. On a machine with no npm / no ui
# source (e.g. a published source tarball, which ships only `ui/web/dist`, not
# `ui/web/src`), build.rs warns loudly and embeds the existing dist as-is. Set
# `LANIUS_SKIP_UI_BUILD=1` to skip the npm build and embed the existing dist
# (broken local Node, CI oddities). Note: dist is gitignored, NOT committed —
# a fresh no-Node clone has no dist and build.rs fails with a clear message.
# See build.rs and docs/handoffs/web-embed-freshness.md.
include = [
    "src/**/*",
    "build.rs",
    "packages/**/*",
    "kits/**/*",
    "templates/**/*",
    "ui/web/dist/**/*",
    "Cargo.toml",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.6", features = ["derive"] }
croner = "3.0"
# TLS: native-tls (SChannel on Windows, SecureTransport on macOS, OpenSSL on
# Linux) instead of the default rustls+aws-lc-rs. This drops the aws-lc-sys C
# crypto crate entirely — it fails to cross-compile to windows-msvc
# (jitterentropy-base-windows.h can't find windows.h from a mac host) and, on a
# native Windows box, additionally demands NASM + a full C toolchain, an unkind
# ask for `cargo install lanius`. genai 0.6.5 exposes ONLY `rustls-tls`
# (-> reqwest/rustls -> aws-lc) or `native-tls`, so native-tls is the sole lever
# that keeps aws-lc out of the graph without forking genai. Prove it gone with
# `cargo tree -i aws-lc-sys` (should report "nothing depends on it").
# Trade: Linux builds now need OpenSSL dev headers (present on ubuntu-latest CI).
genai = { version = "0.6.5", default-features = false, features = ["native-tls"] }
ntex = { version = "3.9.6", features = ["tokio"] }
ntex-mqtt = "8.1.0"
# default features drop `use-rustls`: the bus talks plain TCP to a loopback
# broker (no Transport::Tls anywhere in src), so MQTT TLS is dead weight. It also
# pulled rustls 0.22 -> `ring`, whose C build (like aws-lc) can't cross-compile
# to windows-msvc from a mac host. Dropping it removes the last C-crypto blocker.
rumqttc = { version = "0.24", default-features = false }
rusqlite = { version = "0.40", features = ["bundled"] }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
toml = "1"
uuid = { version = "1", features = ["v4"] }
toml_edit = "0.25.12"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "native-tls"] }
include_dir = "0.7"
chacha20poly1305 = "0.10"

# libc is a Unix-only concern; every libc call site is now behind `#[cfg(unix)]`
# (mostly inside src/platform/unix.rs). On Windows the platform shims use
# windows-sys instead. Keeping libc off the Windows graph makes a stray,
# unguarded libc call a hard compile error rather than a silent link failure.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
] }

[[bin]]
name = "harness-acp"
path = "src/bin/harness-acp.rs"
