[package]
name = "lanius"
version = "0.1.1"
edition = "2021"
rust-version = "1.88"
default-run = "lanius"
description = "A local control plane for AI work: event-driven agent orchestration with a flight recorder (inetd + cron + git hooks + sqlite)"
license = "Apache-2.0"
repository = "https://github.com/tkellogg/lanius"
homepage = "https://github.com/tkellogg/lanius"
readme = "README.md"
keywords = ["agents", "llm", "orchestration", "claude", "harness"]
categories = ["command-line-utilities", "development-tools"]

# What ships in the published crate. `include` is an explicit allowlist (it
# overrides .gitignore), so it MUST cover everything the binary compiles against:
# `src`, `build.rs`, the `include_str!` roots in src/initcmd.rs (`packages/`,
# `kits/`), and the web UI that src/web.rs embeds via `include_dir!`
# (`ui/web/dist`, a build output that is gitignored). Miss one and `cargo
# install` fails to compile on the user's machine.
#
# BUILD ORDER is now automatic: `build.rs` runs the vite build into ui/web/dist
# BEFORE the crate compiles, so a plain `cargo build` always embeds a fresh UI —
# no manual rebuild-dist-then-re-embed ritual. On a machine with no npm / no ui
# source (e.g. a published source tarball, which ships only `ui/web/dist`, not
# `ui/web/src`), build.rs warns loudly and embeds the existing dist as-is. Set
# `LANIUS_SKIP_UI_BUILD=1` to skip the npm build and embed the existing dist
# (broken local Node, CI oddities). Note: dist is gitignored, NOT committed —
# a fresh no-Node clone has no dist and build.rs fails with a clear message.
# See build.rs and docs/handoffs/web-embed-freshness.md.
include = [
    "src/**/*",
    "build.rs",
    "packages/**/*",
    "kits/**/*",
    "templates/**/*",
    "ui/web/dist/**/*",
    "Cargo.toml",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.6", features = ["derive"] }
croner = "3.0"
ntex = { version = "3.9.6", features = ["tokio"] }
ntex-mqtt = "8.1.0"
# default features drop `use-rustls`: the bus talks plain TCP to a loopback
# broker (no Transport::Tls anywhere in src), so MQTT TLS is dead weight. It also
# pulled rustls 0.22 -> `ring`, whose C build (like aws-lc) can't cross-compile
# to windows-msvc from a mac host. Dropping it removes the last C-crypto blocker.
rumqttc = { version = "0.24", default-features = false }
rusqlite = { version = "0.40", features = ["bundled"] }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
toml = "1"
uuid = { version = "1", features = ["v4"] }
toml_edit = "0.25.12"
include_dir = "0.7"
chacha20poly1305 = "0.10"

# ── TLS is target-scoped (docs/handoffs/windows-support.md M1) ────────────────
# Unix keeps the exact 0.1.1 configuration: genai/reqwest defaults = rustls +
# aws-lc-rs, fully static, no dynamic-lib deps for Linux/mac users (Tim's
# ruling: no OpenSSL dependency on Linux). Windows swaps to native-tls
# (SChannel): aws-lc-sys does not cross-compile to windows-msvc and, on a
# native box, demands NASM + a full C toolchain — an unkind ask for a `cargo
# install lanius` user. genai 0.6.5 exposes only `rustls-tls` (-> aws-lc) or
# `native-tls`, so native-tls is the sole per-target lever without forking
# genai; a genai-upstream ring feature is the eventual static-everywhere path.
# Feature unification is per-compile-target, so the two tables do not bleed:
# `cargo tree -i aws-lc-sys` is NON-empty on a unix host and EMPTY under
# `--target x86_64-pc-windows-msvc` (verified both ways).
#
# libc is likewise Unix-only; every libc call site is behind `#[cfg(unix)]`
# (mostly inside src/platform/unix.rs). On Windows the platform shims use
# windows-sys instead. Keeping libc off the Windows graph makes a stray,
# unguarded libc call a hard compile error rather than a silent link failure.
[target.'cfg(unix)'.dependencies]
libc = "0.2"
genai = "0.6.5"
reqwest = { version = "0.13.4", features = ["json"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
] }
genai = { version = "0.6.5", default-features = false, features = ["native-tls"] }
reqwest = { version = "0.13.4", default-features = false, features = ["json", "native-tls"] }

[[bin]]
name = "harness-acp"
path = "src/bin/harness-acp.rs"
